fixed mobile navbar being covered by banner

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ body {
     height: 80px;
     width: 100%;
     position: absolute;
-    top: 0
+    top: 0;
+    z-index: 100;
 }
 
 .navbar-toggle {
